# csi_analysis

./: Dockerfile  README.md  make_docker.sh  pyproject.toml  requirements.txt
csi_analysis/: csi_logging.py  csi_scan_pipeline.py  make_docs.py
csi_analysis/modules/: README.md  cellpose_segmenter.py  channel_classifier.py  event_extracter.py  threshold_filter.py
csi_analysis/pipelines/: scan_pipeline.py
csi_analysis/utils/: csi_logging.py  make_docs.py
docs/: csi_analysis.html  index.html  make_docs.sh  search.js  tests.html
docs/csi_analysis/: csi_logging.html  csi_scan_pipeline.html  make_docs.html  modules.html  pipelines.html  utils.html
docs/csi_analysis/modules/: cellpose_segmenter.html  classic_segmenter.html  event_extracter.html  ocular_frameinfo_generator.html  ocular_report_clusterer.html  ocular_report_generator.html  tophat_preprocessor.html
docs/csi_analysis/pipelines/: scan.html  scan_pipeline.html
docs/csi_analysis/utils/: csi_logging.html  make_docs.html
docs/tests/: test_event_extracter.html  test_logging.html  test_scan_pipeline.html
docs/theme/: index.html.jinja2
tests/: test_logging.py  test_scan_pipeline.py
tests/data/: mask.npy
