[project]
name = "csi_analysis"
version = "1.0.0"
description = "CSI-Cancer analysis pipeline templates."
requires-python = ">=3.11"
authors = [
    { name = "Brian J. Zhang", email = "8885230+brianjzhang@users.noreply.github.com" }
]
readme = "README.md"

dependencies = [
    "csi_images >=1.0",
    "numpy >=2.0",
    "pandas >=2.0",
    "scikit-image >=0.24.0",
    "opencv-python-headless >=4.5",
]

[project.scripts]
make_docs = "csi_analysis.utils.make_docs:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]