[project]
name = "csi_analysis"
version = "1.0.0"
description = "CSI-Cancer analysis pipeline templates."
requires-python = ">=3.11"
authors = [
    { name = "Brian Zhang", email = "8885230+brianjzhang@users.noreply.github.com" }
]
readme = "README.md"

dependencies = [
    "csi_images",
    "pandas",
    "numpy",
]


[project.optional-dependencies]
images = [
    "csi_images[imageio]",
    "scikit-image",
    "opencv-python",
]
all = [
    "csi_analysis[images]",
]

[project.scripts]
make_docs = "csi_analysis.utils.make_docs:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]